<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp">

        <TextView
            android:id="@+id/tvSignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:gravity="center"
            android:text="@string/tv_sign_up_title"
            android:textAppearance="@style/headline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSignUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/tl_sign_up_username"
            app:hintTextAppearance="@style/title1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUpTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/title1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/tl_sign_up_password"
            app:hintTextAppearance="@style/title1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlSignUpUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="@style/title1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSignUpNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/tl_sign_up_nickname"
            app:hintTextAppearance="@style/title1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlSignUpPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/title1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlSignUpPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/tv_sign_up_phone_number"
            app:hintTextAppearance="@style/title1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlSignUpNickname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSignUpPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/title1" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/viewSignUpButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_default_radius_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlSignUpPhoneNumber" />

        <TextView
            android:id="@+id/tvSignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_sign_up_button"
            android:textAppearance="@style/title1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/viewSignUpButton"
            app:layout_constraintEnd_toEndOf="@id/viewSignUpButton"
            app:layout_constraintStart_toStartOf="@id/viewSignUpButton"
            app:layout_constraintTop_toTopOf="@id/viewSignUpButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
